Switched join/create room by ID to code for easier join

--- a/app/features/room/room.component.html
+++ b/app/features/room/room.component.html
@@ -1,4 +1,4 @@
-<h1>{{ $ctrl.room.$id }}</h1>
+<h1>{{ $ctrl.room.roomCode }}</h1>
 <md-list>
     <md-subheader class="md-no-sticky">
         <span>Players</span>
