Few changes and Fixes
-added increment round button in game view html
-added logic to roomsFactory for storing and incrementing round, and reseting word bank
-changed the way we initially created the word bank copy
-fixed issue with toggle team button visible in case that another user has same username, user is able to toggle every user with the same username, fixed with user id check

--- a/app/features/game/game.component.html
+++ b/app/features/game/game.component.html
@@ -1,4 +1,12 @@
-<md-button ng-click="">
+<div>
+  ROUND: {{ $ctrl.room.gameStatus.round }}
+</div>
+<span>
+  <md-button class="md-primary" ng-click="$ctrl.nextRound()">
+    Next Round
+</md-button>
+</span>
+<md-button ng-click="$ctrl.gotIt()">
     Got it!
 </md-button>
 <h1> {{ $ctrl.getWord() }} </h1>
