--- a/app/features/game/game.component.html
+++ b/app/features/game/game.component.html
@@ -9,7 +9,8 @@
 <md-button ng-click="$ctrl.gotIt()">
     Got it!
 </md-button>
-<h1> {{ $ctrl.getWord() }} </h1>
+<h1 ng-if="!$ctrl.noWordsLeft()"> {{ $ctrl.getWord() }} </h1>
+<h1 ng-if="$ctrl.noWordsLeft()"> NO MORE WORDS! </h1>
 <md-button class="md-primary" ng-click="$ctrl.nextWord()">
     Pass
 </md-button>
