--- a/app/features/game/game.component.html
+++ b/app/features/game/game.component.html
@@ -21,17 +21,17 @@
   </div>
   <div ng-if="$ctrl.isPlayersTurn()">
     <div>
-      <md-button ng-click="$ctrl.gotIt()">
+      <md-button class="btn-game md-raised" ng-click="$ctrl.gotIt()">
         Got it!
       </md-button>
       <h1 ng-if="!$ctrl.noWordsLeft()"> {{ $ctrl.getWord() }} </h1>
       <h1 ng-if="$ctrl.noWordsLeft()"> NO MORE WORDS! </h1>
-      <md-button class="md-primary" ng-click="$ctrl.nextWord()">
+      <md-button class="btn-game md-raised md-primary" ng-click="$ctrl.nextWord()">
         Pass
       </md-button>
     </div>
     <div>
-      <md-button ng-if="$ctrl.isLastPlayer()" class="md-primary" ng-click="$ctrl.nextRound()">
+      <md-button ng-if="$ctrl.isLastPlayer()" class="btn-game md-primary" ng-click="$ctrl.nextRound()">
         <span ng-if="!($ctrl.room.gameStatus.round === 3)">Next Round</span>
         <span ng-if="($ctrl.room.gameStatus.round === 3)">New Game</span>
       </md-button>
@@ -39,7 +39,7 @@
     </div>
 
     <div>
-      <md-button ng-if="!$ctrl.isLastPlayer()" class="md-primary" ng-click="$ctrl.nextPlayersTurn()">
+      <md-button ng-if="!$ctrl.isLastPlayer()" class="btn-game md-raised md-primary" ng-click="$ctrl.nextPlayersTurn()">
         Next Player
       </md-button>
     </div>
@@ -51,7 +51,7 @@
 </div>
 
 <div>
-  <md-button ng-if="$ctrl.room.gameStatus.readyForNewGame" class="md-primary" ng-click="$ctrl.goBackToRoom()">
+  <md-button ng-if="$ctrl.room.gameStatus.readyForNewGame" class="btn-game md-primary" ng-click="$ctrl.goBackToRoom()">
     <span>New Game</span>
   </md-button>
 </div>
