--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,14 +13,12 @@
 .col-team-one {
   vertical-align: top;
   display: inline-block;
-  padding: 20px;
-  margin-right: 20px; }
+  padding: 20px; }
 
 .col-team-two {
   vertical-align: top;
   display: inline-block;
-  padding: 20px;
-  margin-left: 20px; }
+  padding: 20px; }
 
 .team-label {
   font-size: 30px; }
