--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,22 +7,31 @@
 .btn-submit {
   padding: 30px 50px; }
 
-.btn-switch-teams {
-  padding: 20px 40px; }
+.switch-teams {
+  text-align: center; }
+  .switch-teams .btn-switch-teams {
+    padding: 20px 40px;
+    text-align: center; }
 
-.col-team-one {
-  vertical-align: top;
-  display: inline-block;
-  padding: 20px; }
-
-.col-team-two {
-  vertical-align: top;
-  display: inline-block;
-  padding: 20px; }
+.team-list {
+  text-align: center; }
+  .team-list .col-team-one {
+    vertical-align: top;
+    display: inline-block;
+    padding: 10px; }
+  .team-list .col-team-two {
+    vertical-align: top;
+    display: inline-block;
+    padding: 10px; }
 
 .team-label {
-  font-size: 30px; }
+  font-size: 20px; }
 
 .user-label {
   text-align: center;
   padding: 5px; }
+
+.form-submit {
+  text-align: center; }
+  .form-submit .word-label {
+    text-align: left; }
