--- a/app/features/room/room.component.html
+++ b/app/features/room/room.component.html
@@ -1,12 +1,9 @@
 <h1>{{ $ctrl.room.roomCode }}</h1>
 <md-list>
-  <md-subheader class="md-no-sticky">
-    <span>Players</span>
-  </md-subheader>
-  <div>
+  <div class="switch-teams">
     <md-button class="btn-switch-teams md-raised" ng-click="$ctrl.switchTeams()">SWITCH TEAMS</md-button>
   </div>
-  <div>
+  <div class="team-list">
     <span class="col-team-one" >
       <div class="team-label">Team One</div>
       <div ng-repeat="player in $ctrl.room.players track by $index">
@@ -20,65 +17,65 @@
       <div  ng-repeat="player in $ctrl.room.players track by $index">
     <div ng-if="player.team === 'Team Two'">
           <div class="user-label">{{player.username }}</div>
-      <!--<md-button class="md-raised" ng-if="$ctrl.isUser($index) && !$ctrl.isSubmitted()" ng-click="$ctrl.switchTeams()"> {{ $ctrl.team($index) }} </md-button>-->
-      <!--<span ng-if="!$ctrl.isUser($index) || $ctrl.isSubmitted()">{{ $ctrl.team($index) }}</span>-->
-      <!--<div ng-if="player.team =='Team One'"><md-button class="md-raised md-primary" ng-click="$ctrl.changeTeams()">Team One</md-button></div>-->
-      <!--<div ng-if="player.team =='Team two'"><md-button ng-click="$ctrl.changeTeams()">Team Two</md-button></div>-->
     </div>
     </div>
     </span>
 
   </div>
-
-
 </md-list>
 
-<div ng-if="!$ctrl.isSubmitted()">
+<div class="form-submit" ng-if="!$ctrl.isSubmitted()">
   <form ng-submit="$ctrl.submitWords()" ng-if="!$ctrl.submitted">
     <h4 style="margin: 0;">Submit 5 Words!</h4>
-    <li>
+    <div class="word-one">
       <md-input-container>
-        <label>1)</label>
+        <label class="word-label">1)</label>
         <input type="text" ng-model="$ctrl.form.wordOne" autofocus/>
       </md-input-container>
-
+    </div>
+    <div>
       <md-input-container>
-        <label>2)</label>
+        <label class="word-label">2)</label>
         <input type="text" ng-model="$ctrl.form.wordTwo" autofocus/>
       </md-input-container>
-
+    </div>
+    <div>
       <md-input-container>
-        <label>3)</label>
+        <label class="word-label">3)</label>
         <input type="text" ng-model="$ctrl.form.wordThree" autofocus/>
       </md-input-container>
-
+    </div>
+    <div>
       <md-input-container>
-        <label>4)</label>
+        <label class="word-label">4)</label>
         <input type="text" ng-model="$ctrl.form.wordFour" autofocus/>
       </md-input-container>
-
+    </div>
+    <div>
       <md-input-container>
-        <label>5)</label>
+        <label class="word-label">5)</label>
         <input type="text" ng-model="$ctrl.form.wordFive" autofocus/>
       </md-input-container>
-    </li>
-
-    <md-button class="btn-submit md-raised md-primary" ng-click="$ctrl.submitWords()">
-      Submit
-    </md-button>
+    </div>
+    <div>
+      <md-button class="btn-submit md-raised md-primary" ng-click="$ctrl.submitWords()">
+        Submit
+      </md-button>
+    </div>
   </form>
+  <div ng-if="$ctrl.submitted">You have submitted :)</div>
+
+
+  <div >
+    <md-button ng-if="$ctrl.readyToStart()" class="md-raised md-primary" ng-click="$ctrl.startGame()">
+      Start
+    </md-button>
+  </div>
+
+
+  <div class="btn-back">
+    <a href="/">Back</a>
+  </div>
 </div>
 
-<div ng-if="$ctrl.submitted">You have submitted :)</div>
 
-
-<div >
-  <md-button ng-if="$ctrl.readyToStart()" class="md-raised md-primary" ng-click="$ctrl.startGame()">
-    Start
-  </md-button>
-</div>
-
-
-<div class="btn-back">
-  <a href="/">Back</a>
-</div>
