Edit Submissions, remove user from team and players arrays

--- a/app/features/room/room.component.html
+++ b/app/features/room/room.component.html
@@ -77,7 +77,7 @@
 <div ng-if="$ctrl.isSubmitted()" class="element-centered" >
   <div>Waiting for everyone to submit words</div>
   <md-button class="btn-submit md-raised md-primary" ng-click="$ctrl.deleteSubmitWords()">
-    Delete Submissions
+    Edit Submissions
   </md-button>
 </div>
 
