Pressing back removes user and their words

--- a/app/features/room/room.component.html
+++ b/app/features/room/room.component.html
@@ -90,7 +90,10 @@
 
 
 <div class="btn-back element-centered">
-  <a href="/">Back</a>
+  <a href="/"
+  ng-click="$ctrl.removeUser()">
+    Back
+  </a>
 </div>
 
 
