--- a/app/features/game/game.component.html
+++ b/app/features/game/game.component.html
@@ -2,9 +2,14 @@
   Waiting for everyone to press start
 </div>
 
-<div ng-if="$ctrl.everyoneInGame()">
+<div class="element-centered" ng-if="$ctrl.everyoneInGame()">
   <div>
     ROUND: {{ $ctrl.room.gameStatus.round }}
+  </div>
+  <div>
+    <span>Team One: {{$ctrl.getScore()[0]}} </span>
+    <span>Team Two: {{$ctrl.getScore()[1]}} </span>
+
   </div>
   <div>
     <h2>{{ $ctrl.room.gameStatus.teamTurn }}</h2>
@@ -20,17 +25,19 @@
     </div>
   </div>
   <div ng-if="$ctrl.isPlayersTurn()">
-    <div>
+    <div class="u-margin-30-0">
       <md-button class="btn-game md-raised" ng-click="$ctrl.gotIt()">
         Got it!
       </md-button>
+    </div>
+    <div class="u-margin-30-0">
       <h1 ng-if="!$ctrl.noWordsLeft()"> {{ $ctrl.getWord() }} </h1>
       <h1 ng-if="$ctrl.noWordsLeft()"> NO MORE WORDS! </h1>
       <md-button class="btn-game md-raised md-primary" ng-click="$ctrl.nextWord()">
         Pass
       </md-button>
     </div>
-    <div>
+    <div class="u-margin-30-0">
       <md-button ng-if="$ctrl.isLastPlayer()" class="btn-game md-primary" ng-click="$ctrl.nextRound()">
         <span ng-if="!($ctrl.room.gameStatus.round === 3)">Next Round</span>
         <span ng-if="($ctrl.room.gameStatus.round === 3)">New Game</span>
@@ -38,8 +45,8 @@
 
     </div>
 
-    <div>
-      <md-button ng-if="!$ctrl.isLastPlayer()" class="btn-game md-raised md-primary" ng-click="$ctrl.nextPlayersTurn()">
+    <div class="u-margin-70-0-0">
+      <md-button ng-if="!$ctrl.isLastPlayer()" class="btn-game md-primary" ng-click="$ctrl.nextPlayersTurn()">
         Next Player
       </md-button>
     </div>
