--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,12 @@
 .btn-game {
   padding: 20px 60px; }
 
+.u-margin-70-0-0 {
+  margin: 70px 0 0; }
+
+.u-margin-30-0 {
+  margin: 30px 0; }
+
 .btn-back {
   padding-top: 70px; }
 
