Code redesign roomsService, create, join, and esLint fixes

--- a/app/features/create/create.component.html
+++ b/app/features/create/create.component.html
@@ -5,7 +5,7 @@
         <h4 style="margin: 0;">Creating a game...</h4>
         <md-input-container>
           <label>What's your name?</label>
-          <input ng-model="$ctrl.user.name">
+          <input ng-model="$ctrl.user.userName">
           <md-button class="md-raised md-primary" ng-click="$ctrl.createGame()" ng-disabled="$ctrl.isLoading">
             Create
           </md-button>
