--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,9 +1,17 @@
 <div class="main" layout="row">
   <span flex></span>
   <div layout="column">
-    <h3>What do you want to do?</h3>
-    <md-button class="md-raised" href="/create">Create</md-button>
-    <md-button class="md-raised md-primary" href="/join">Join</md-button>
+    <h3 ng-bind="'What do you want to do?'"></h3>
+    <md-button class="md-raised"
+               href="/create"
+               ng-bind="'Create'"
+               aria-label="'Create">
+        </md-button>
+    <md-button class="md-raised md-primary"
+               href="/join"
+               ng-bind="'Join'"
+               aria-label="'Join">
+    </md-button>
   </div>
   <span flex></span>
 </div>
