Code redesign for room component

--- a/app/styles/_room.scss
+++ b/app/styles/_room.scss
@@ -20,17 +20,17 @@
 .team-list {
   text-align: center;
 
-  .col-team-one {
+  .col-team {
     vertical-align: top;
     display: inline-block;
     padding: 10px;
   }
 
-  .col-team-two {
-    vertical-align: top;
-    display: inline-block;
-    padding: 10px;
-  }
+  //.col-team-two {
+  //  vertical-align: top;
+  //  display: inline-block;
+  //  padding: 10px;
+  //}
 }
 
 
