--- a/app/features/room/room.component.html
+++ b/app/features/room/room.component.html
@@ -1,101 +1,88 @@
-<!--<h1>{{ $ctrl.room.roomCode }}</h1>-->
-<!--<md-list>-->
-  <!--<div class="switch-teams">-->
-    <!--<md-button class="btn-switch-teams md-raised" ng-click="$ctrl.switchTeams()">SWITCH TEAMS</md-button>-->
-  <!--</div>-->
-  <!--<div class="team-list">-->
-    <!--<span class="col-team-one" >-->
-      <!--<div class="team-label">Team One</div>-->
-      <!--<div ng-repeat="player in $ctrl.room.players track by $index">-->
-        <!--<div ng-if="player.team === 'Team One'">-->
-          <!--<span ng-if="player.submittedWords"><md-icon md-svg-icon="checkmark" aria-label="submitted"></md-icon></span>-->
-          <!--<span class="user-label">{{ player.username }}</span>-->
-          <!--<span ng-if="player.isMaster"><md-icon md-svg-icon="key" aria-label="master"></md-icon></span>-->
-          <!--<span ng-if="$ctrl.participantIsMaster()">-->
-            <!--<span ng-if="!player.isMaster"><md-icon md-svg-icon="remove" aria-label="remove" ng-click="$ctrl.removeUser($index)"></md-icon></span>-->
-          <!--</span>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--</span>-->
-    <!--<span class="col-team-two">-->
-          <!--<div class="team-label">Team Two</div>-->
-      <!--<div  ng-repeat="player in $ctrl.room.players track by $index">-->
-    <!--<div ng-if="player.team === 'Team Two'">-->
-          <!--<span ng-if="player.submittedWords"><md-icon md-svg-icon="checkmark" aria-label="submitted"></md-icon></span>-->
-          <!--<span class="user-label">{{player.username }}</span>-->
-          <!--<span ng-if="player.isMaster"><md-icon md-svg-icon="key" aria-label="master""></md-icon></span>-->
-          <!--<span ng-if="$ctrl.participantIsMaster()">-->
-            <!--<span ng-if="!player.isMaster"><md-icon md-svg-icon="remove" aria-label="remove" ng-click="$ctrl.removeUser($index)"></md-icon></span>-->
-          <!--</span>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</span>-->
+<h1 ng-bind="::$ctrl.roomData.roomCode">
+</h1>
+<md-list>
+    <div class="switch-teams">
+        <md-button class="btn-switch-teams md-raised"
+                   aria-label="switch teams"
+                   ng-click="$ctrl.switchTeams()"
+                   ng-bind="'SWITCH TEAMS'">
+        </md-button>
+    </div>
+    <div ng-if="$ctrl.getPlayers()"
+         class="team-list">
+        <span ng-repeat="(labelText, value) in $ctrl.teamsLabels"
+              class="col-team">
+          <div class="team-label"
+               ng-bind="::labelText">
+          </div>
+          <div ng-repeat="(playerId, player) in $ctrl.roomData.players track by $index"
+               ng-if="player.teamOne === value">
+              <span ng-if="player.submitted">
+                  <md-icon md-svg-icon="checkmark" aria-label="submitted">
+                  </md-icon>
+              </span>
+              <span class="user-label"
+                    ng-bind="player.userName">
+              </span>
+              <span ng-if="playerId === $ctrl.roomData.status.roomMaster">
+                  <md-icon md-svg-icon="key" aria-label="master">
+                  </md-icon>
+              </span>
+              <span ng-if="$ctrl.participantIsMaster()">
+                <span ng-if="playerId !== $ctrl.roomData.status.roomMaster">
+                    <md-icon md-svg-icon="remove" aria-label="remove"
+                             ng-click="$ctrl.removeUser(playerId)">
+                    </md-icon>
+                </span>
+              </span>
+        </div>
+        </span>
+    </div>
+</md-list>
 
-  <!--</div>-->
-<!--</md-list>-->
+<div class="form-submit" ng-if="!$ctrl.hasSubmitted()">
+    <form ng-submit="$ctrl.submitWords()" ng-if="!$ctrl.submitted">
+        <h4 style="margin: 0;">Submit 5 Words!</h4>
+        <div ng-repeat="word in $ctrl.form track by $index">
+            <md-input-container>
+                <label class="word-label"
+                       ng-bind="::$index+1 + ')'">
+                </label>
+                <input type="text"
+                       ng-model="$ctrl.form[$index]"
+                       autofocus/>
+            </md-input-container>
+        </div>
+        <div>
+            <md-button class="btn-submit md-raised md-primary" ng-click="$ctrl.submitWords()">
+                Submit
+            </md-button>
+        </div>
+    </form>
+</div>
 
-<!--<div class="form-submit" ng-if="!(vm.submitted || vm.isSubmitted())">-->
-  <!--<form ng-submit="$ctrl.submitWords()" ng-if="!$ctrl.submitted">-->
-    <!--<h4 style="margin: 0;">Submit 5 Words!</h4>-->
-    <!--<div class="word-one">-->
-      <!--<md-input-container>-->
-        <!--<label class="word-label">1)</label>-->
-        <!--<input type="text" ng-model="$ctrl.form.wordOne" autofocus/>-->
-      <!--</md-input-container>-->
-    <!--</div>-->
-    <!--<div>-->
-      <!--<md-input-container>-->
-        <!--<label class="word-label">2)</label>-->
-        <!--<input type="text" ng-model="$ctrl.form.wordTwo" autofocus/>-->
-      <!--</md-input-container>-->
-    <!--</div>-->
-    <!--<div>-->
-      <!--<md-input-container>-->
-        <!--<label class="word-label">3)</label>-->
-        <!--<input type="text" ng-model="$ctrl.form.wordThree" autofocus/>-->
-      <!--</md-input-container>-->
-    <!--</div>-->
-    <!--<div>-->
-      <!--<md-input-container>-->
-        <!--<label class="word-label">4)</label>-->
-        <!--<input type="text" ng-model="$ctrl.form.wordFour" autofocus/>-->
-      <!--</md-input-container>-->
-    <!--</div>-->
-    <!--<div>-->
-      <!--<md-input-container>-->
-        <!--<label class="word-label">5)</label>-->
-        <!--<input type="text" ng-model="$ctrl.form.wordFive" autofocus/>-->
-      <!--</md-input-container>-->
-    <!--</div>-->
-    <!--<div>-->
-      <!--<md-button class="btn-submit md-raised md-primary" ng-click="$ctrl.submitWords()">-->
-        <!--Submit-->
-      <!--</md-button>-->
-    <!--</div>-->
-  <!--</form>-->
-
-<!--</div>-->
-
-<!--<div ng-if="$ctrl.isSubmitted()" class="element-centered" >-->
-  <!--<div>Waiting for everyone to submit words</div>-->
-  <!--<md-button class="btn-submit md-raised md-primary" ng-click="$ctrl.deleteSubmitWords()">-->
-    <!--Edit Submissions-->
-  <!--</md-button>-->
-<!--</div>-->
+<div ng-if="$ctrl.hasSubmitted()" class="element-centered">
+    <!--<div>Waiting for everyone to submit words</div>-->
+    <div ng-if="$ctrl.isGameStarted()"></div>
+    <md-button class="btn-submit md-raised md-primary" ng-click="$ctrl.editSubmittedWords()">
+        Edit Submissions
+    </md-button>
+</div>
 
 
-<!--<div class="element-centered">-->
-  <!--<md-button ng-if="$ctrl.readyToStart()" class="md-raised md-primary" ng-click="$ctrl.startGame()">-->
-    <!--Start-->
-  <!--</md-button>-->
-<!--</div>-->
+<div ng-if="$ctrl.isGameReadyToStart() && $ctrl.user.status.roomMaster"
+     class="element-centered">
+    <md-button class="md-raised md-primary" ng-click="$ctrl.startGame()">
+        Start
+    </md-button>
+</div>
 
 
 <!--<div class="btn-back element-centered">-->
-  <!--<a href="/"-->
-  <!--ng-click="$ctrl.removeUser()">-->
-    <!--Back-->
-  <!--</a>-->
+<!--<a href="/"-->
+<!--ng-click="$ctrl.removeUser()">-->
+<!--Back-->
+<!--</a>-->
 <!--</div>-->
 
 
